Bug 765803 - Reply above quote (no signature, HTML composition) no longer leaves a blank line r=neil

--HG--
extra : amend_source : 251866e4a63b40a4bd06200289815ca828daaf26
extra : histedit_source : b174a455f304dc288421b4aa799568d007533dce